fixed the login button where it added horizontal scroll on pages

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,7 +14,7 @@
 
   a {
     text-decoration: none;
-    margin: 0 -20px 0 35px;
+    margin: 0 0 0 35px;
     color: white;
     }
   }
@@ -26,7 +26,7 @@
     text-decoration: none;
     a {
       text-decoration: none;
-      margin: 0 -20px 0 35px;
+      margin: 0 0 0 35px;
       color: gray;
     }
   }
@@ -41,7 +41,7 @@
   text-decoration: none;
   a {
     text-decoration: none;
-    margin: 0 -20px 0 35px;
+    margin: 0 0 0 35px;
     color: gray;
   }
 }
@@ -51,21 +51,7 @@
     display: inline-block;
   }
 }
-.fa-calendar-check {
-  margin-right: 15px;
-  margin-top: 15px;
-  color: #7f7f7f;
-  a {
-    text-decoration: none;
-  }
-}
-.fa-comment-alt {
-  margin-right: 5px;
-  margin-top: 8px;
-}
-.fa-bell {
-  margin-top: 8px;
-}
+
 .fa-user {
   a {
     text-decoration: none;
